--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".UpdateFighterActivity"
+            android:name=".EditFighterActivity"
             android:exported="false" />
         <activity
             android:name=".CreateFighterActivity"
